Tests/fail/whiteSpace.php
<?php
// No trailing white space
$x = 0;   
?>